--- a/modules/feature/layout/src/lib/header/header.component.html
+++ b/modules/feature/layout/src/lib/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<!-- header: semantica e acessibilidade -->
+<header class="header">
+  <h1 class="logo">Ecommerce</h1>
+</header>
