--- a/modules/feature/layout/src/lib/header/header.component.html
+++ b/modules/feature/layout/src/lib/header/header.component.html
@@ -1,4 +1,4 @@
 <!-- header: semantica e acessibilidade -->
 <header class="header">
-  <h1 class="logo">Ecommerce</h1>
+  <h1 class="logo">{{ title }}</h1>
 </header>
