--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<lib-header title="Ecommerce"></lib-header>
+<lib-header title="Ecommerce">
+  <lib-product-search></lib-product-search>
+
+  <p right>Login</p>
+</lib-header>
 <router-outlet></router-outlet>
