--- a/modules/feature/layout/src/lib/header/header.component.html
+++ b/modules/feature/layout/src/lib/header/header.component.html
@@ -1,6 +1,8 @@
 <!-- header: semantica e acessibilidade -->
 <header class="header">
-  <h1 class="logo">{{ title }}</h1>
+  <a routerLink="/" class="header__logo" aria-label="Ir para o inicio">
+    <h1 class="header__title">{{ title }}</h1>
+  </a>
   <ng-content></ng-content>
   <ng-content select="[right]"></ng-content>
 </header>
